feat: Implement the extraction event handler plugin with core managers, listeners, tasks, GUIs, and storage components.