@@ -1,6 +1,8 @@
 package com.criztiandev.extractionevent.commands;
 
 import com.criztiandev.extractionevent.ExtractionEventPlugin;
+import com.criztiandev.extractionevent.managers.AdminMonitorManager;
+import com.criztiandev.extractionevent.managers.LockdownManager;
 import com.criztiandev.extractionevent.models.LevRegion;
 import com.criztiandev.extractionevent.utils.WandUtil;
 import org.bukkit.command.Command;
@@ -16,28 +18,34 @@ import java.util.Locale;
 import java.util.stream.Collectors;
 
 /**
- * Main command: /lev (alias: /ee, /extractionevent)
+ * /lev  (aliases: /lrev, /ee, /extractionevent)
  *
- * Sub-commands:
- *   /lev                       → opens the region admin GUI
- *   /lev gui                   → same as above
- *   /lev wand                  → gives region-selection wand
- *   /lev create <name>         → creates region from current selection
- *   /lev remove <name>         → removes region
- *   /lev list                  → lists all regions
- *   /lev showNameTags          → toggles server-wide real-name reveal mode
- *   /lev toggle <region> <feature> [on|off]  → per-region feature flag control
+ * ── Region management ─────────────────────────────────────────────
+ *   /lev                           → opens the admin GUI
+ *   /lev wand                      → gives selection wand
+ *   /lev create <name>             → creates region from wand selection
+ *   /lev remove <name>             → deletes a region
+ *   /lev list                      → lists all regions
+ *   /lev feature <region> <flag> [on|off]  → toggles a per-region setting
  *
- * All sub-commands require extractionevent.admin.
- * Tab-completion is fully implemented for all args.
+ * ── Event controls ────────────────────────────────────────────────
+ *   /lev event <region> start [seconds]  → start a Warzone Shift
+ *   /lev event <region> stop             → stop an active Warzone Shift
+ *
+ * ── Admin / utilities ─────────────────────────────────────────────
+ *   /lev monitor <nametags|chat|map>     → toggle your personal monitor view
+ *   /lev testmode                        → let restrictions apply to yourself
+ *   /lev reload                          → hot-reload config & regions
  */
 public class LevCommand implements CommandExecutor, TabCompleter {
 
-    private static final List<String> FEATURES = List.of(
+    private static final List<String> REGION_FEATURES = List.of(
             "nametags", "pearl", "enderchest",
             "freecam", "damagecap",
             "lightning", "mimic", "killeffect", "envoy"
     );
+
+    private static final List<String> MONITOR_FEATURES = List.of("nametags", "chat", "map");
 
     private final ExtractionEventPlugin plugin;
 
@@ -45,16 +53,16 @@ public class LevCommand implements CommandExecutor, TabCompleter {
         this.plugin = plugin;
     }
 
-    // ── Command execution ─────────────────────────────────────────────────────
+    // ── Dispatch ──────────────────────────────────────────────────────────────
 
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
         if (!(sender instanceof Player player)) {
-            sender.sendMessage("§cOnly players can use this command.");
+            sender.sendMessage("§cOnly players can run this command.");
             return true;
         }
         if (!player.hasPermission("extractionevent.admin")) {
-            player.sendMessage("§cYou do not have permission to use this command.");
+            player.sendMessage("§cYou don't have permission to use this command.");
             return true;
         }
 
@@ -64,24 +72,23 @@ public class LevCommand implements CommandExecutor, TabCompleter {
         }
 
         switch (args[0].toLowerCase(Locale.ROOT)) {
-            case "gui"           -> openGui(player);
-            case "wand"          -> giveWand(player);
-            case "create"        -> handleCreate(player, args);
-            case "remove"        -> handleRemove(player, args);
-            case "list"          -> handleList(player);
-            case "reload"        -> plugin.reload(player);
-            case "testmode"      -> handleTestMode(player);
-            case "shownametags",
-                 "showNametags",
-                 "nametags"      -> handleShowNameTags(player);
-            case "toggle"        -> handleToggle(player, args);
-            case "shift"         -> handleShift(player, args);
-            default              -> sendHelp(player);
+            case "wand"     -> giveWand(player);
+            case "create"   -> handleCreate(player, args);
+            case "remove"   -> handleRemove(player, args);
+            case "list"     -> handleList(player);
+            case "feature"  -> handleFeature(player, args);
+            case "event"    -> handleEvent(player, args);
+            case "lockdown" -> handleLockdown(player, args);
+            case "koth"     -> handleKoth(player, args);
+            case "monitor"  -> handleMonitor(player, args);
+            case "testmode" -> handleTestMode(player);
+            case "reload"   -> plugin.reload(player);
+            default         -> sendHelp(player);
         }
         return true;
     }
 
-    // ── Sub-command handlers ──────────────────────────────────────────────────
+    // ── Region management ─────────────────────────────────────────────────────
 
     private void openGui(Player player) {
         new com.criztiandev.extractionevent.gui.MainMenuGui(plugin).open(player);
@@ -89,159 +96,290 @@ public class LevCommand implements CommandExecutor, TabCompleter {
 
     private void giveWand(Player player) {
         player.getInventory().addItem(WandUtil.getWand(plugin));
-        player.sendMessage("§aYou have received the Lev Region wand.");
+        player.sendMessage("§a✔ Wand added to your inventory. Left/right-click blocks to select corners.");
     }
 
     private void handleCreate(Player player, String[] args) {
-        if (args.length < 2) { player.sendMessage("§cUsage: §e/lev create <name>"); return; }
+        if (args.length < 2) {
+            player.sendMessage("§cUsage: §e/lev create <name>");
+            player.sendMessage("§7Tip: Make a wand selection first with §e/lev wand");
+            return;
+        }
         String name = args[1];
         if (plugin.getRegionManager().getRegion(name) != null) {
-            player.sendMessage("§cA region named §e" + name + " §calready exists.");
+            player.sendMessage("§c✘ A region called §e'" + name + "'§c already exists. Use a different name.");
             return;
         }
         var selection = plugin.getRegionManager().getSelection(player.getUniqueId());
         if (selection == null || !selection.isComplete()) {
-            player.sendMessage("§cMake a complete selection with the wand first.");
+            player.sendMessage("§c✘ No complete selection found. Use §e/lev wand §cto select two corners first.");
             return;
         }
         LevRegion region = new LevRegion(name, selection.getWorldName(),
                 selection.getMinX(), selection.getMaxX(),
                 selection.getMinZ(), selection.getMaxZ());
-        // Let LevRegion defaults (-64 to 320) apply so the region is full-height.
         plugin.getRegionManager().saveRegion(region);
         plugin.getRegionManager().removeSelection(player.getUniqueId());
-        player.sendMessage("§aRegion §e" + name + " §acreated.");
+        player.sendMessage("§a✔ Region §e'" + name + "'§a created.");
     }
 
     private void handleRemove(Player player, String[] args) {
-        if (args.length < 2) { player.sendMessage("§cUsage: §e/lev remove <name>"); return; }
+        if (args.length < 2) {
+            player.sendMessage("§cUsage: §e/lev remove <region-name>");
+            return;
+        }
         String name = args[1];
         if (plugin.getRegionManager().getRegion(name) == null) {
-            player.sendMessage("§cNo region named §e" + name + "§c.");
+            player.sendMessage("§c✘ No region called §e'" + name + "'§c. Check §e/lev list§c for names.");
             return;
         }
         plugin.getRegionManager().deleteRegion(name);
-        player.sendMessage("§aRegion §e" + name + " §adeleted.");
+        player.sendMessage("§a✔ Region §e'" + name + "'§a deleted.");
     }
 
     private void handleList(Player player) {
         var regions = plugin.getRegionManager().getRegions();
-        player.sendMessage("§d--- Lev Regions (" + regions.size() + ") ---");
+        if (regions.isEmpty()) {
+            player.sendMessage("§7No regions created yet. Use §e/lev wand §7+ §e/lev create <name>§7.");
+            return;
+        }
+        player.sendMessage("§d§l── Regions (" + regions.size() + ") ──────────────────");
         for (LevRegion r : regions) {
-            player.sendMessage("§e" + r.getId() + " §7(" + r.getWorld() + ")");
+            player.sendMessage("§e" + r.getId() + " §8• §7" + r.getWorld());
         }
     }
 
-    private void handleTestMode(Player player) {
-        boolean now = plugin.toggleTestMode(player.getUniqueId());
-        String state = now ? "§aON §7— restrictions apply to you" : "§cOFF §7— you bypass restrictions";
-        player.sendMessage("§d[Lev] §7Test mode: " + state);
-    }
+    // ── Feature flags ─────────────────────────────────────────────────────────
 
     /**
-     * /lev showNameTags
-     * Toggles server-wide reveal mode: when ON, all warzone players' real names are
-     * visible in the tab list and chat (the overhead nametag remains hidden by the team).
-     * Useful for admins to identify players mid-fight without breaking immersion for others.
+     * /lev feature <region> <flag> [on|off]
+     * Former name: toggle — renamed to avoid confusion with monitor toggles.
      */
-    private void handleShowNameTags(Player player) {
-        boolean nowRevealing = plugin.getNameTagManager().toggleRevealMode();
-        String state = nowRevealing ? "§aON §7— real names now visible in tab list" : "§cOFF §7— all players are Anonymous";
-        player.sendMessage("§d[Lev] §7Name tag reveal mode: " + state);
-        plugin.getLogger().info("[Lev] Admin " + player.getName() + " toggled name reveal: " + nowRevealing);
-    }
-
-    /**
-     * /lev toggle <region> <feature> [on|off]
-     */
-    private void handleToggle(Player player, String[] args) {
+    private void handleFeature(Player player, String[] args) {
         if (args.length < 3) {
-            player.sendMessage("§cUsage: §e/lev toggle <region> <feature> [on|off]");
-            player.sendMessage("§7Features: §e" + String.join(", ", FEATURES));
+            player.sendMessage("§cUsage: §e/lev feature <region> <flag> [on|off]");
+            player.sendMessage("§7Flags: §e" + String.join("§7, §e", REGION_FEATURES));
             return;
         }
 
         LevRegion region = plugin.getRegionManager().getRegion(args[1]);
         if (region == null) {
-            player.sendMessage("§cNo region named §e" + args[1] + "§c.");
+            player.sendMessage("§c✘ No region called §e'" + args[1] + "'§c. Check §e/lev list§c.");
             return;
         }
 
-        String feature = args[2].toLowerCase(Locale.ROOT);
-        // Determine the desired value (true/false/flip)
+        String flag = args[2].toLowerCase(Locale.ROOT);
         Boolean desired = null;
         if (args.length >= 4) {
             String val = args[3].toLowerCase(Locale.ROOT);
-            if (val.equals("on") || val.equals("true"))  desired = true;
+            if (val.equals("on")  || val.equals("true"))  desired = true;
             if (val.equals("off") || val.equals("false")) desired = false;
         }
 
-        boolean set = applyToggle(region, feature, desired);
+        boolean set = applyFeature(player, region, flag, desired);
         plugin.getRegionManager().saveRegion(region);
 
-        String stateStr = set ? "§aEnabled" : "§cDisabled";
-        player.sendMessage("§d[Lev] §e" + region.getId() + "§7 — §f" + feature + " §7→ " + stateStr);
+        String stateStr = set ? "§aEnabled ✔" : "§cDisabled ✘";
+        player.sendMessage("§d[Feature] §e" + region.getId() + " §8» §f" + flag + " §8→ " + stateStr);
     }
 
-    private void handleShift(Player player, String[] args) {
+    private boolean applyFeature(Player player, LevRegion region, String flag, Boolean desired) {
+        return switch (flag) {
+            case "nametags"   -> { region.setHideNameTags(desired != null ? desired : !region.isHideNameTags()); yield region.isHideNameTags(); }
+            case "pearl"      -> { region.setBlockEnderPearl(desired != null ? desired : !region.isBlockEnderPearl()); yield region.isBlockEnderPearl(); }
+            case "enderchest" -> { region.setEnderChestRestricted(desired != null ? desired : !region.isEnderChestRestricted()); yield region.isEnderChestRestricted(); }
+            case "freecam"    -> { region.setFreeCamBlocked(desired != null ? desired : !region.isFreeCamBlocked()); yield region.isFreeCamBlocked(); }
+            case "damagecap"  -> { region.setDamageCapped(desired != null ? desired : !region.isDamageCapped()); yield region.isDamageCapped(); }
+            case "lightning"  -> { region.setLightningOnDeath(desired != null ? desired : !region.isLightningOnDeath()); yield region.isLightningOnDeath(); }
+            case "mimic"      -> { region.setSpawnMimic(desired != null ? desired : !region.isSpawnMimic()); yield region.isSpawnMimic(); }
+            case "killeffect" -> { region.setKillEffectEnabled(desired != null ? desired : !region.isKillEffectEnabled()); yield region.isKillEffectEnabled(); }
+            case "envoy"      -> { region.setEnvoyEventEnabled(desired != null ? desired : !region.isEnvoyEventEnabled()); yield region.isEnvoyEventEnabled(); }
+            default           -> {
+                player.sendMessage("§c✘ Unknown flag §e'" + flag + "'§c.");
+                player.sendMessage("§7Valid flags: §e" + String.join("§7, §e", REGION_FEATURES));
+                yield false;
+            }
+        };
+    }
+
+    // ── Lockdown / KOTH ───────────────────────────────────────────────────────
+
+    /**
+     * /lev lockdown start  — lock every extraction region instantly
+     * /lev lockdown stop   — re-open all extraction regions
+     * /lev lockdown status — show current lockdown state
+     */
+    private void handleLockdown(Player player, String[] args) {
+        LockdownManager lm = plugin.getLockdownManager();
+
+        if (args.length < 2 || args[1].equalsIgnoreCase("status")) {
+            if (lm.isLockdownActive()) {
+                player.sendMessage("§8[§4⚠ LOCKDOWN§8] §cAll extraction points are §4LOCKED§c.");
+            } else if (lm.isKothActive()) {
+                player.sendMessage("§8[§6⚔ KOTH§8] §eKOTH active — only §a" + lm.getKothRegionId() + "§e is open.");
+            } else {
+                player.sendMessage("§8[§aLockdown§8] §7No lockdown active. All extraction points are §aopen§7.");
+            }
+            return;
+        }
+
+        switch (args[1].toLowerCase()) {
+            case "start" -> {
+                if (lm.isLockdownActive()) {
+                    player.sendMessage("§cLockdown is already active. Use §e/lev lockdown stop §cfirst.");
+                    return;
+                }
+                if (!lm.startLockdown(player)) {
+                    player.sendMessage("§c✘ Failed — is ExtractionRegionEditor loaded?");
+                }
+            }
+            case "stop" -> {
+                if (!lm.isLockdownActive() && !lm.isKothActive()) {
+                    player.sendMessage("§7No lockdown is currently active.");
+                    return;
+                }
+                if (!lm.stop(player)) {
+                    player.sendMessage("§c✘ Failed — is ExtractionRegionEditor loaded?");
+                }
+            }
+            default -> player.sendMessage("§cUsage: §e/lev lockdown <start|stop|status>");
+        }
+    }
+
+    /**
+     * /lev koth <region> start  — lock all regions except <region>
+     * /lev koth stop            — end KOTH (re-opens all regions)
+     */
+    private void handleKoth(Player player, String[] args) {
+        LockdownManager lm = plugin.getLockdownManager();
+
+        if (args.length < 2) {
+            player.sendMessage("§cUsage:");
+            player.sendMessage("§e  /lev koth <region> start §8— §7lock all regions except <region>");
+            player.sendMessage("§e  /lev koth stop           §8— §7end KOTH mode, open all regions");
+            if (lm.isKothActive()) {
+                player.sendMessage("§8Status: §6KOTH active §8— king region: §a" + lm.getKothRegionId());
+            }
+            return;
+        }
+
+        // /lev koth stop
+        if (args[1].equalsIgnoreCase("stop")) {
+            if (!lm.isKothActive()) {
+                player.sendMessage("§7KOTH is not currently active.");
+                return;
+            }
+            if (!lm.stop(player)) {
+                player.sendMessage("§c✘ Failed — is ExtractionRegionEditor loaded?");
+            }
+            return;
+        }
+
+        // /lev koth <region> start
+        if (args.length < 3 || !args[2].equalsIgnoreCase("start")) {
+            player.sendMessage("§cUsage: §e/lev koth <region> start§c  or  §e/lev koth stop");
+            return;
+        }
+
+        String regionId = args[1];
+        if (lm.isKothActive()) {
+            player.sendMessage("§cKOTH is already active (king: §e" + lm.getKothRegionId() + "§c). Stop it first with §e/lev koth stop§c.");
+            return;
+        }
+        if (!lm.startKoth(player, regionId)) {
+            player.sendMessage("§c✘ Failed — region §e'" + regionId + "'§c not found or ExtractionRegionEditor is not loaded.");
+        }
+    }
+
+    // ── Event (Warzone Shift) ─────────────────────────────────────────────────
+
+    /**
+     * /lev event <region> start [seconds]
+     * /lev event <region> stop
+     */
+    private void handleEvent(Player player, String[] args) {
         if (args.length < 3) {
-            player.sendMessage("§cUsage: §e/lrev shift <region> <start|stop|settime> [duration_seconds]");
+            player.sendMessage("§cUsage:");
+            player.sendMessage("§e  /lev event <region> start [seconds] §7— begin a Warzone Shift");
+            player.sendMessage("§e  /lev event <region> stop             §7— end the current shift");
             return;
         }
 
         LevRegion region = plugin.getRegionManager().getRegion(args[1]);
         if (region == null) {
-            player.sendMessage("§cNo region named §e" + args[1] + "§c.");
+            player.sendMessage("§c✘ No region called §e'" + args[1] + "'§c. Check §e/lev list§c.");
             return;
         }
 
         String action = args[2].toLowerCase(Locale.ROOT);
-        if (action.equals("start")) {
-            long duration = plugin.getConfig().getLong("warzone.warzone-shift-duration", 3600);
-            if (args.length >= 4) {
-                try {
-                    duration = Long.parseLong(args[3]);
-                } catch (NumberFormatException ignored) {}
+        switch (action) {
+            case "start" -> {
+                long duration = plugin.getConfig().getLong("warzone.warzone-shift-duration", 3600);
+                if (args.length >= 4) {
+                    try { duration = Long.parseLong(args[3]); }
+                    catch (NumberFormatException e) {
+                        player.sendMessage("§c✘ Duration must be a number (seconds). Example: §e/lev event " + region.getId() + " start 1800");
+                        return;
+                    }
+                }
+                plugin.getWarzoneShiftManager().startShift(region.getId(), duration);
+                player.sendMessage("§a✔ Warzone Shift started in §e'" + region.getId() + "'§a for §e" + duration + "s§a.");
             }
-            plugin.getWarzoneShiftManager().startShift(region.getId(), duration);
-            player.sendMessage("§aStarted a Warzone Shift in §e" + region.getId() + "§a for " + duration + "s.");
-        } else if (action.equals("stop")) {
-            if (plugin.getWarzoneShiftManager().stopShift(region.getId())) {
-                player.sendMessage("§aStopped the active Warzone Shift in §e" + region.getId());
-            } else {
-                player.sendMessage("§cNo active shift in §e" + region.getId());
+            case "stop" -> {
+                if (plugin.getWarzoneShiftManager().stopShift(region.getId())) {
+                    player.sendMessage("§a✔ Warzone Shift stopped in §e'" + region.getId() + "'§a.");
+                } else {
+                    player.sendMessage("§c✘ No active shift in §e'" + region.getId() + "'§c.");
+                }
             }
-        } else if (action.equals("settime")) {
-            if (args.length < 4) {
-                player.sendMessage("§cUsage: §e/lrev shift <region> settime <duration_seconds>");
-                return;
+            default -> {
+                player.sendMessage("§c✘ Unknown action §e'" + action + "'§c. Use §estart§c or §estop§c.");
             }
-            try {
-                long duration = Long.parseLong(args[3]);
-                plugin.getWarzoneShiftManager().startShift(region.getId(), duration); // overrides
-                player.sendMessage("§aUpdated Warzone Shift in §e" + region.getId() + "§a to " + duration + "s.");
-            } catch (NumberFormatException e) {
-                player.sendMessage("§cDuration must be a number!");
-            }
-        } else {
-            player.sendMessage("§cUnknown action §e" + action + "§c. Use start, stop, or settime.");
         }
     }
 
-    /** Applies the toggle to the correct field. Returns the new boolean state. */
-    private boolean applyToggle(LevRegion region, String feature, Boolean desired) {
-        return switch (feature) {
-            case "nametags"    -> { region.setHideNameTags(desired != null ? desired : !region.isHideNameTags()); yield region.isHideNameTags(); }
-            case "pearl"       -> { region.setBlockEnderPearl(desired != null ? desired : !region.isBlockEnderPearl()); yield region.isBlockEnderPearl(); }
-            case "enderchest"  -> { region.setEnderChestRestricted(desired != null ? desired : !region.isEnderChestRestricted()); yield region.isEnderChestRestricted(); }
-            case "freecam"     -> { region.setFreeCamBlocked(desired != null ? desired : !region.isFreeCamBlocked()); yield region.isFreeCamBlocked(); }
-            case "damagecap"   -> { region.setDamageCapped(desired != null ? desired : !region.isDamageCapped()); yield region.isDamageCapped(); }
-            case "lightning"   -> { region.setLightningOnDeath(desired != null ? desired : !region.isLightningOnDeath()); yield region.isLightningOnDeath(); }
-            case "mimic"       -> { region.setSpawnMimic(desired != null ? desired : !region.isSpawnMimic()); yield region.isSpawnMimic(); }
-            case "killeffect"  -> { region.setKillEffectEnabled(desired != null ? desired : !region.isKillEffectEnabled()); yield region.isKillEffectEnabled(); }
-            case "envoy"       -> { region.setEnvoyEventEnabled(desired != null ? desired : !region.isEnvoyEventEnabled()); yield region.isEnvoyEventEnabled(); }
-            default            -> false;
-        };
+    // ── Admin monitor ─────────────────────────────────────────────────────────
+
+    /**
+     * /lev monitor <nametags|chat|map>
+     * Per-admin toggle — each admin independently chooses what they see.
+     */
+    private void handleMonitor(Player player, String[] args) {
+        if (args.length < 2) {
+            player.sendMessage("§d§l── Monitor Toggles (your personal view) ──");
+            AdminMonitorManager monitor = plugin.getAdminMonitorManager();
+            player.sendMessage(statusLine(monitor, player, AdminMonitorManager.Feature.NAMETAGS, "nametags", "see real names above heads"));
+            player.sendMessage(statusLine(monitor, player, AdminMonitorManager.Feature.CHAT,     "chat",     "see [Monitor] RealName in chat"));
+            player.sendMessage(statusLine(monitor, player, AdminMonitorManager.Feature.MAP,      "map",      "keep your minimap in the warzone"));
+            player.sendMessage("§8Run §e/lev monitor <feature>§8 to toggle.");
+            return;
+        }
+
+        AdminMonitorManager.Feature feature = AdminMonitorManager.Feature.fromString(args[1]);
+        if (feature == null) {
+            player.sendMessage("§c✘ Unknown feature §e'" + args[1] + "'§c. Choose: §enametags§c, §echat§c, §emap§c.");
+            return;
+        }
+
+        boolean now = plugin.getAdminMonitorManager().toggle(player.getUniqueId(), feature);
+        String state = now ? "§aON  ✔" : "§cOFF ✘";
+        player.sendMessage("§d[Monitor] §f" + args[1].toLowerCase() + " §8→ " + state);
+    }
+
+    private String statusLine(AdminMonitorManager m, Player p, AdminMonitorManager.Feature f, String name, String desc) {
+        String state = m.has(p, f) ? "§aON §8 " : "§cOFF§8";
+        return "§7  [" + state + "§8] §e" + name + " §8— §7" + desc;
+    }
+
+    // ── Utilities ─────────────────────────────────────────────────────────────
+
+    private void handleTestMode(Player player) {
+        boolean now = plugin.toggleTestMode(player.getUniqueId());
+        if (now) {
+            player.sendMessage("§a✔ Test mode ON §7— restrictions now apply to you (you play like a normal player).");
+        } else {
+            player.sendMessage("§c✘ Test mode OFF §7— you bypass warzone restrictions again.");
+        }
     }
 
     // ── Tab completion ────────────────────────────────────────────────────────
@@ -251,29 +389,38 @@ public class LevCommand implements CommandExecutor, TabCompleter {
         if (!sender.hasPermission("extractionevent.admin")) return List.of();
 
         List<String> completions = new ArrayList<>();
+        String sub = args[0].toLowerCase(Locale.ROOT);
 
         if (args.length == 1) {
-            completions.addAll(Arrays.asList(
-                    "gui", "wand", "create", "remove", "list",
-                    "testmode", "showNameTags", "toggle", "reload", "shift"
+            completions.addAll(List.of(
+                    "wand", "create", "remove", "list",
+                    "feature", "event", "lockdown", "koth",
+                    "monitor", "testmode", "reload"
             ));
         } else if (args.length == 2) {
-            String sub = args[0].toLowerCase(Locale.ROOT);
-            if (sub.equals("remove") || sub.equals("toggle") || sub.equals("shift")) {
-                // Region names
-                for (LevRegion r : plugin.getRegionManager().getRegions()) {
-                    completions.add(r.getId());
+            switch (sub) {
+                case "remove", "feature", "event" -> plugin.getRegionManager().getRegions()
+                        .forEach(r -> completions.add(r.getId()));
+                case "monitor"   -> completions.addAll(MONITOR_FEATURES);
+                case "lockdown"  -> completions.addAll(List.of("start", "stop", "status"));
+                case "koth"      -> {
+                    completions.add("stop");
+                    plugin.getLockdownManager().getExtractionRegionIds()
+                            .forEach(completions::add);
                 }
             }
-        } else if (args.length == 3 && args[0].equalsIgnoreCase("toggle")) {
-            completions.addAll(FEATURES);
-        } else if (args.length == 3 && args[0].equalsIgnoreCase("shift")) {
-            completions.addAll(Arrays.asList("start", "stop", "settime"));
-        } else if (args.length == 4 && args[0].equalsIgnoreCase("toggle")) {
-            completions.addAll(Arrays.asList("on", "off"));
+        } else if (args.length == 3) {
+            switch (sub) {
+                case "feature" -> completions.addAll(REGION_FEATURES);
+                case "event"   -> completions.addAll(List.of("start", "stop"));
+                case "koth"    -> completions.add("start");
+            }
+        } else if (args.length == 4 && sub.equals("feature")) {
+            completions.addAll(List.of("on", "off"));
+        } else if (args.length == 4 && sub.equals("event") && args[2].equalsIgnoreCase("start")) {
+            completions.add("<seconds>");
         }
 
-        // Filter by what the player has typed so far
         String partial = args[args.length - 1].toLowerCase(Locale.ROOT);
         return completions.stream()
                 .filter(c -> c.toLowerCase(Locale.ROOT).startsWith(partial))
@@ -283,17 +430,26 @@ public class LevCommand implements CommandExecutor, TabCompleter {
     // ── Help ──────────────────────────────────────────────────────────────────
 
     private void sendHelp(Player player) {
-        player.sendMessage("§d--- Lev Commands ---");
-        player.sendMessage("§e/lev §7— Open region GUI");
-        player.sendMessage("§e/lev wand §7— Get selection wand");
-        player.sendMessage("§e/lev create <name> §7— Create region from selection");
-        player.sendMessage("§e/lev remove <name> §7— Delete a region");
-        player.sendMessage("§e/lev list §7— List all regions");
-        player.sendMessage("§e/lev reload §7— Reload config and regions (Plugman-safe)");
-        player.sendMessage("§e/lev showNameTags §7— Toggle admin name-reveal mode");
-        player.sendMessage("§e/lev testmode §7— Toggle test mode (bypass restrictions for yourself)");
-        player.sendMessage("§e/lev shift <region> <start|stop|settime> §7— Manual Legend Event controls");
-        player.sendMessage("§e/lev toggle <region> <feature> [on|off] §7— Toggle a region feature");
-        player.sendMessage("§7Features: §e" + String.join(", ", FEATURES));
+        player.sendMessage("§d§l── Lev Admin Commands ─────────────────────────");
+        player.sendMessage("§8Region setup:");
+        player.sendMessage("§e  /lev wand                    §8— §7get selection wand");
+        player.sendMessage("§e  /lev create <name>           §8— §7create region from selection");
+        player.sendMessage("§e  /lev remove <name>           §8— §7delete a region");
+        player.sendMessage("§e  /lev list                    §8— §7list all regions");
+        player.sendMessage("§e  /lev feature <region> <flag> §8— §7toggle a region flag");
+        player.sendMessage("§8Event controls:");
+        player.sendMessage("§e  /lev event <region> start [s] §8— §7start a Warzone Shift");
+        player.sendMessage("§e  /lev event <region> stop      §8— §7stop the active shift");
+        player.sendMessage("§8Lockdown / KOTH:");
+        player.sendMessage("§e  /lev lockdown start|stop|status §8— §7lock all extraction points instantly");
+        player.sendMessage("§e  /lev koth <region> start        §8— §7KOTH: only <region> allows extraction");
+        player.sendMessage("§e  /lev koth stop                  §8— §7end KOTH mode");
+        player.sendMessage("§8Admin monitor (personal):");
+        player.sendMessage("§e  /lev monitor                 §8— §7show your monitor status");
+        player.sendMessage("§e  /lev monitor <nametags|chat|map> §8— §7toggle a monitor view");
+        player.sendMessage("§8Utilities:");
+        player.sendMessage("§e  /lev testmode                §8— §7toggle restriction testing");
+        player.sendMessage("§e  /lev reload                  §8— §7hot-reload config");
+        player.sendMessage("§7Region flags: §e" + String.join(" §7| §e", REGION_FEATURES));
     }
 }
